[gd_scene load_steps=8 format=3 uid="uid://bsd76d68bfwrv"]

[ext_resource type="Script" path="res://src/ui/game_interface.gd" id="1_c4vkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrwkt"]
bg_color = Color(0.550339, 0.0354281, 0.0668633, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45jbs"]
bg_color = Color(0.787459, 0.0756037, 0.116666, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_goqrt"]
bg_color = Color(0.0527, 0.17, 0.085935, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0tkc"]
bg_color = Color(0.165181, 0.410126, 0.238713, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1ege"]
bg_color = Color(0.0646056, 0.202597, 0.574032, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0phwd"]
bg_color = Color(0.15521, 0.348887, 0.84341, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="GameInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_c4vkn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container4Status" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="InventoryFoo" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status/VBoxContainer"]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="ProgressBarHealth" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Health"
theme_override_styles/background = SubResource("StyleBoxFlat_xrwkt")
theme_override_styles/fill = SubResource("StyleBoxFlat_45jbs")
max_value = 10.0
step = 1.0
value = 10.0
fill_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status/VBoxContainer2"]
layout_mode = 2
text = "Energy"
horizontal_alignment = 1

[node name="ProgressBarEnergy" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Energy"
theme_override_styles/background = SubResource("StyleBoxFlat_goqrt")
theme_override_styles/fill = SubResource("StyleBoxFlat_b0tkc")
max_value = 10.0
step = 1.0
value = 10.0
fill_mode = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status/VBoxContainer3"]
layout_mode = 2
text = "Mana"
horizontal_alignment = 1

[node name="ProgressBarMana" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4Status/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Mana"
theme_override_styles/background = SubResource("StyleBoxFlat_r1ege")
theme_override_styles/fill = SubResource("StyleBoxFlat_0phwd")
max_value = 10.0
step = 1.0
value = 10.0
fill_mode = 3

[node name="NextTurnButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Next Turn"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/NextTurnButton" to="." method="_on_next_turn_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/NextTurnButton" to="." method="_on_next_turn_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextTurnButton" to="." method="_on_next_turn_button_pressed"]
